--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "axios": "^1.7.8",
-    "bootstrap": "^5.3.3",
-    "nanoid": "^5.0.9"
+    "nanoid": "^5.0.9",
+    "tailwind": "^4.0.0"
   }
 }
