vakansya sehifesi ve details sehifesi yaradildi

--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
     "vite": "^5.2.0"
   },
   "dependencies": {
+    "9": "^0.0.1",
     "axios": "^1.7.8",
+    "core-js": "^3.39.0",
+    "install": "^0.13.0",
     "nanoid": "^5.0.9",
-    "tailwind": "^4.0.0"
+    "nvm": "^0.0.4",
+    "uuid": "^11.0.3"
   }
 }
